Vertical align fix for IE 11

--- a/src/App.scss
+++ b/src/App.scss
@@ -12,10 +12,15 @@ html, body {
 }
 
 .vertical-center {
-  min-height: 100%;
-  min-height: 100vh;
+  display: -ms-flexbox;
+  display: -webkit-flex;
   display: flex;
   align-items: center;
+  justify-content: center;
+  -ms-flex-pack: center;
+  min-height: 100%;
+  min-height: 100vh;
+  height: 100px;
 }
 
 .back > a{
